# negansurance

./: .gitignore  flake.nix  pyproject.toml  readme.md
apps/api/src/: main.py
apps/api/src/negansurance/core/: config.py
apps/partner_mobile/: .gitignore  app.json  global.css  package-lock.json  package.json  tsconfig.json
apps/partner_mobile/app/: _layout.tsx  index.tsx
apps/partner_mobile/app/(auth)/: _layout.tsx  sign-in.tsx
apps/partner_mobile/app/(auth)/sign-up/: _layout.tsx  account-setup.tsx  index.tsx  verify-phone.tsx
apps/partner_mobile/app/(home)/: _layout.tsx  coming-soon.tsx
apps/partner_mobile/app/(home)/(tabs)/: _layout.tsx  claims.tsx  home.tsx  profile.tsx
apps/partner_mobile/components/: LocationGate.tsx
apps/partner_mobile/context/: registration-context.tsx
scripts/local-dev/: api_runner.sh
services/: __init__.py
services/payout_settlement/: __init__.py  client.py  models.py  service.py
services/trigger-monitoring/: .env.example  trigger_monitoring.py
services/trigger-monitoring/utils/: fetch_aqi_summary.py  fetch_civic_alerts.py  fetch_location_coordinates.py  fetch_weather_summary.py
